--- a/vty.cabal
+++ b/vty.cabal
@@ -1,5 +1,5 @@
 name:                vty
-version:             5.2.3
+version:             5.2.4
 license:             BSD3
 license-file:        LICENSE
 author:              AUTHORS
@@ -114,7 +114,7 @@ library
 
   ghc-prof-options:    -O2 -funbox-strict-fields -threaded -caf-all -Wall -fspec-constr -fspec-constr-count=10
 
-  cc-options:          -O2 -fpic
+  cc-options:          -O2
 
 executable vty-demo
   main-is:             Demo.hs
