--- a/vty.cabal
+++ b/vty.cabal
@@ -50,7 +50,7 @@ library
                        deepseq >= 1.1 && < 1.4,
                        directory,
                        filepath >= 1.0 && < 2.0,
-                       lens >= 3.9.0.2 && < 4.5,
+                       lens >= 3.9.0.2 && < 4.6,
                        -- required for nice installation with yi
                        hashable >= 1.2,
                        mtl >= 1.1.1.0 && < 2.3,
@@ -139,7 +139,7 @@ test-suite verify-attribute-ops
   build-depends:       vty,
                        Cabal >= 1.18,
                        QuickCheck >= 2.4,
-                       random == 1.0.*,
+                       random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
                        bytestring,
                        containers,
@@ -171,7 +171,7 @@ test-suite verify-using-mock-terminal
   build-depends:       vty,
                        Cabal >= 1.18,
                        QuickCheck >= 2.4,
-                       random == 1.0.*,
+                       random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
                        bytestring,
                        containers,
@@ -204,7 +204,7 @@ test-suite verify-terminal
   build-depends:       vty,
                        Cabal >= 1.18,
                        QuickCheck >= 2.4,
-                       random == 1.0.*,
+                       random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
                        bytestring,
                        containers,
@@ -238,7 +238,7 @@ test-suite verify-display-attributes
   build-depends:       vty,
                        Cabal >= 1.18,
                        QuickCheck >= 2.4,
-                       random == 1.0.*,
+                       random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
                        bytestring,
                        containers,
@@ -264,7 +264,7 @@ test-suite verify-empty-image-props
   build-depends:       vty,
                        Cabal >= 1.18,
                        QuickCheck >= 2.4,
-                       random == 1.0.*,
+                       random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
                        bytestring,
                        containers,
@@ -291,7 +291,7 @@ test-suite verify-eval-terminfo-caps
   build-depends:       vty,
                        Cabal >= 1.18,
                        QuickCheck >= 2.4,
-                       random == 1.0.*,
+                       random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
                        blaze-builder >= 0.3.3.2 && < 0.4,
                        bytestring,
@@ -321,7 +321,7 @@ test-suite verify-image-ops
   build-depends:       vty,
                        Cabal >= 1.18,
                        QuickCheck >= 2.4,
-                       random == 1.0.*,
+                       random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
                        bytestring,
                        containers,
@@ -349,7 +349,7 @@ test-suite verify-image-trans
   build-depends:       vty,
                        Cabal >= 1.18,
                        QuickCheck >= 2.4,
-                       random == 1.0.*,
+                       random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
                        bytestring,
                        containers,
@@ -376,7 +376,7 @@ test-suite verify-inline
   build-depends:       vty,
                        Cabal >= 1.18,
                        QuickCheck >= 2.4,
-                       random == 1.0.*,
+                       random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
                        bytestring,
                        containers,
@@ -404,7 +404,7 @@ test-suite verify-parse-terminfo-caps
   build-depends:       vty,
                        Cabal >= 1.18,
                        QuickCheck >= 2.4,
-                       random == 1.0.*,
+                       random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
                        bytestring,
                        containers,
@@ -436,7 +436,7 @@ test-suite verify-simple-span-generation
   build-depends:       vty,
                        Cabal >= 1.18,
                        QuickCheck >= 2.4,
-                       random == 1.0.*,
+                       random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
                        bytestring,
                        containers,
@@ -468,7 +468,7 @@ test-suite verify-crop-span-generation
   build-depends:       vty,
                        Cabal >= 1.18,
                        QuickCheck >= 2.4,
-                       random == 1.0.*,
+                       random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
                        bytestring,
                        containers,
@@ -500,7 +500,7 @@ test-suite verify-layers-span-generation
   build-depends:       vty,
                        Cabal >= 1.18,
                        QuickCheck >= 2.4,
-                       random == 1.0.*,
+                       random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
                        bytestring,
                        containers,
@@ -526,7 +526,7 @@ test-suite verify-utf8-width
   build-depends:       vty,
                        Cabal >= 1.18,
                        QuickCheck >= 2.4,
-                       random == 1.0.*,
+                       random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
                        bytestring,
                        containers,
@@ -555,7 +555,7 @@ test-suite verify-using-mock-input
                        quickcheck-assertions >= 0.1.1,
                        test-framework == 0.8.*,
                        test-framework-smallcheck == 0.2.*,
-                       random == 1.0.*,
+                       random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
                        bytestring,
                        containers,
@@ -590,7 +590,7 @@ test-suite verify-config
                        test-framework == 0.8.*,
                        test-framework-smallcheck == 0.2.*,
                        test-framework-hunit,
-                       random == 1.0.*,
+                       random >= 1.0 && < 1.2,
                        base >= 4 && < 5,
                        bytestring,
                        containers,
