--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,14 @@ notifications:
 
 matrix:
   allow_failures:
-    - env: GHCVER=head
+    - env: CABALVER=head GHCVER=head
 
 env:
- - GHCVER=7.4.2
- - GHCVER=7.6.3
- - GHCVER=7.8.2
- - GHCVER=head
+ - CABALVER=1.20 GHCVER=7.4.2
+ - CABALVER=1.20 GHCVER=7.6.3
+ - CABALVER=1.20 GHCVER=7.8.3
+ - CABALVER=1.22 GHCVER=7.10.1
+ - CABALVER=head GHCVER=head
 
 install:
   - ./ci/travis_ci_install
@@ -22,5 +23,5 @@ script:
 before_install:
  - sudo add-apt-repository -y ppa:hvr/ghc
  - sudo apt-get update
- - sudo apt-get install cabal-install-1.20 ghc-$GHCVER
+ - sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER
  - export PATH=/opt/ghc/$GHCVER/bin:$PATH
