--- a/vty.cabal
+++ b/vty.cabal
@@ -59,6 +59,7 @@ library
                        mtl >= 1.1.1.0 && < 2.3,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
+                       stm,
                        terminfo >= 0.3 && < 0.5,
                        transformers >= 0.3.0.0,
                        text >= 0.11.3,
@@ -564,6 +565,7 @@ test-suite verify-using-mock-input
                        deepseq >= 1.1 && < 1.5,
                        lens >= 3.9.0.2 && < 5.0,
                        mtl >= 1.1.1.0 && < 2.3,
+                       stm,
                        terminfo >= 0.3 && < 0.5,
                        text >= 0.11.3,
                        unix,
