Add compilation options for windows. Partition platform specific aspects to platform specific modules. Minor re-arrangements. Add stub implementations for windows constructors: inputForConfig, outputForConfig.
These are only the changes required for the library to compile on windows. Nothing more. The tests, for instance, do not compile.

--- a/vty.cabal
+++ b/vty.cabal
@@ -1,5 +1,5 @@
 name:                vty
-version:             5.4.1
+version:             5.5.0
 license:             BSD3
 license-file:        LICENSE
 author:              AUTHORS
@@ -25,7 +25,7 @@ description:
   maintainter to aid in debugging the issue.
   .
   Notable infelicities: Assumes UTF-8 character encoding support by the
-  terminal; Poor signal handling; Requires terminfo.
+  terminal; Poor signal handling; Requires terminfo on POSIX systems.
   .
   This project is hosted on github.com: <https://github.com/coreyoconnor/vty>
   .
@@ -42,6 +42,9 @@ data-files:          README.md,
                      CHANGELOG,
                      LICENSE
 tested-with:         GHC >= 7.6.2
+
+flag curses
+  description: Use curses based terminfo
 
 library
   default-language:    Haskell2010
@@ -60,12 +63,11 @@ library
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
                        stm,
-                       terminfo >= 0.3 && < 0.5,
                        transformers >= 0.3.0.0,
                        text >= 0.11.3,
-                       unix,
                        utf8-string >= 0.3 && < 1.1,
-                       vector >= 0.7
+                       vector >= 0.7,
+                       unix-compat >= 0.4.1.4 && < 0.5
 
   exposed-modules:     Graphics.Vty
                        Graphics.Vty.Attributes
@@ -76,37 +78,59 @@ library
                        Graphics.Vty.Inline.Unsafe
                        Graphics.Vty.Input
                        Graphics.Vty.Input.Events
+                       Graphics.Vty.Input.Interface
                        Graphics.Vty.Picture
                        Graphics.Vty.Prelude
                        Graphics.Vty.Output
                        Graphics.Text.Width
-                       -- the modules below are only meant to be used by the tests.
-                       Codec.Binary.UTF8.Debug
                        Data.Terminfo.Parse
                        Data.Terminfo.Eval
+                       -- the modules below are only meant to be used by the tests.
+                       Codec.Binary.UTF8.Debug
                        Graphics.Vty.Debug
                        Graphics.Vty.DisplayAttributes
                        Graphics.Vty.Image.Internal
-                       Graphics.Vty.Input.Classify
-                       Graphics.Vty.Input.Loop
-                       Graphics.Vty.Input.Terminfo
                        Graphics.Vty.PictureToSpans
                        Graphics.Vty.Span
                        Graphics.Vty.Output.Mock
                        Graphics.Vty.Output.Interface
-                       Graphics.Vty.Output.XTermColor
-                       Graphics.Vty.Output.TerminfoBased
 
   other-modules:       Graphics.Vty.Attributes.Color
                        Graphics.Vty.Attributes.Color240
                        Graphics.Vty.Debug.Image
-                       Graphics.Vty.Input.Terminfo.ANSIVT
 
-  c-sources:           cbits/gwinsz.c
-                       cbits/set_term_timing.c
-                       cbits/mk_wcwidth.c
+  c-sources:           foreign/vty_mk_wcwidth.c
+  include-dirs:        foreign
 
-  include-dirs:        cbits
+  -- non windows / curses components
+  if flag(curses) && !os(windows)
+    exposed-modules:   Graphics.Vty.Output.XTermColor
+                       Graphics.Vty.Output.TerminfoBased
+                       Graphics.Vty.Input.Posix
+                       Graphics.Vty.Input.Posix.Loop
+                       Graphics.Vty.Input.Terminfo
+                       Graphics.Vty.Input.Terminfo.Classify
+
+    other-modules:     Graphics.Vty.Input.Terminfo.ANSIVT
+                       Graphics.Vty.Inline.Unsafe.Posix
+
+    build-depends:     unix,
+                       terminfo >= 0.3 && < 0.5
+
+    c-sources:         foreign/posix/gwinsz.c
+                       foreign/posix/set_term_timing.c
+
+    include-dirs:      foreign/posix
+
+    cpp-options:       -DPOSIX -DTERMINFO
+
+  if os(windows)
+    build-depends:    Win32
+    exposed-modules:  Graphics.Vty.Windows
+                      Graphics.Vty.Input.Windows
+                      Graphics.Vty.Output.Windows
+
+    cpp-options:      -DWINDOWS
 
   hs-source-dirs:      src
 
@@ -181,11 +205,13 @@ test-suite verify-using-mock-terminal
                        deepseq >= 1.1 && < 1.5,
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
-                       terminfo >= 0.3 && < 0.5,
-                       unix,
                        utf8-string >= 0.3 && < 1.1,
                        vector >= 0.7
-  
+
+  if flag(curses) && !os(windows)
+    build-depends:     unix,
+                       terminfo >= 0.3 && < 0.5
+
 test-suite verify-terminal
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
@@ -214,11 +240,13 @@ test-suite verify-terminal
                        data-default >= 0.5.3,
                        deepseq >= 1.1 && < 1.5,
                        mtl >= 1.1.1.0 && < 2.3,
-                       terminfo >= 0.3 && < 0.5,
                        text >= 0.11.3,
-                       unix,
                        utf8-string >= 0.3 && < 1.1,
                        vector >= 0.7
+
+  if flag(curses) && !os(windows)
+    build-depends:     unix,
+                       terminfo >= 0.3 && < 0.5
 
 test-suite verify-display-attributes
   default-language:    Haskell2010
@@ -248,9 +276,12 @@ test-suite verify-display-attributes
                        deepseq >= 1.1 && < 1.5,
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
-                       unix,
                        utf8-string >= 0.3 && < 1.1,
                        vector >= 0.7
+
+  if flag(curses) && !os(windows)
+    build-depends:     unix,
+                       terminfo >= 0.3 && < 0.5
 
 test-suite verify-empty-image-props
   default-language:    Haskell2010
@@ -274,9 +305,12 @@ test-suite verify-empty-image-props
                        deepseq >= 1.1 && < 1.5,
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
-                       unix,
                        utf8-string >= 0.3 && < 1.1,
                        vector >= 0.7
+
+  if flag(curses) && !os(windows)
+    build-depends:     unix,
+                       terminfo >= 0.3 && < 0.5
 
 test-suite verify-eval-terminfo-caps
   default-language:    Haskell2010
@@ -301,11 +335,13 @@ test-suite verify-eval-terminfo-caps
                        containers,
                        deepseq >= 1.1 && < 1.5,
                        mtl >= 1.1.1.0 && < 2.3,
-                       terminfo >= 0.3 && < 0.5,
                        text >= 0.11.3,
-                       unix,
                        utf8-string >= 0.3 && < 1.1,
                        vector >= 0.7
+
+  if flag(curses) && !os(windows)
+    build-depends:     unix,
+                       terminfo >= 0.3 && < 0.5
 
 test-suite verify-image-ops
   default-language:    Haskell2010
@@ -331,9 +367,12 @@ test-suite verify-image-ops
                        deepseq >= 1.1 && < 1.5,
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
-                       unix,
                        utf8-string >= 0.3 && < 1.1,
                        vector >= 0.7
+
+  if flag(curses) && !os(windows)
+    build-depends:     unix,
+                       terminfo >= 0.3 && < 0.5
 
 test-suite verify-image-trans
   default-language:    Haskell2010
@@ -359,9 +398,12 @@ test-suite verify-image-trans
                        deepseq >= 1.1 && < 1.5,
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
-                       unix,
                        utf8-string >= 0.3 && < 1.1,
                        vector >= 0.7
+
+  if flag(curses) && !os(windows)
+    build-depends:     unix,
+                       terminfo >= 0.3 && < 0.5
 
 test-suite verify-inline
   default-language:    Haskell2010
@@ -386,9 +428,12 @@ test-suite verify-inline
                        deepseq >= 1.1 && < 1.5,
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
-                       unix,
                        utf8-string >= 0.3 && < 1.1,
                        vector >= 0.7
+
+  if flag(curses) && !os(windows)
+    build-depends:     unix,
+                       terminfo >= 0.3 && < 0.5
 
 test-suite verify-parse-terminfo-caps
   default-language:    Haskell2010
@@ -413,12 +458,14 @@ test-suite verify-parse-terminfo-caps
                        containers,
                        deepseq >= 1.1 && < 1.5,
                        mtl >= 1.1.1.0 && < 2.3,
-                       terminfo >= 0.3 && < 0.5,
                        text >= 0.11.3,
-                       unix,
                        utf8-string >= 0.3 && < 1.1,
                        vector >= 0.7
-  
+
+  if flag(curses) && !os(windows)
+    build-depends:     unix,
+                       terminfo >= 0.3 && < 0.5
+
 test-suite verify-simple-span-generation
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
@@ -446,11 +493,14 @@ test-suite verify-simple-span-generation
                        deepseq >= 1.1 && < 1.5,
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
-                       unix,
                        utf8-string >= 0.3 && < 1.1,
                        vector >= 0.7
-  
-  
+
+  if flag(curses) && !os(windows)
+    build-depends:     unix,
+                       terminfo >= 0.3 && < 0.5
+
+
 test-suite verify-crop-span-generation
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
@@ -478,10 +528,13 @@ test-suite verify-crop-span-generation
                        deepseq >= 1.1 && < 1.5,
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
-                       unix,
                        utf8-string >= 0.3 && < 1.1,
                        vector >= 0.7
-  
+
+  if flag(curses) && !os(windows)
+    build-depends:     unix,
+                       terminfo >= 0.3 && < 0.5
+
 
 test-suite verify-layers-span-generation
   default-language:    Haskell2010
@@ -510,9 +563,12 @@ test-suite verify-layers-span-generation
                        deepseq >= 1.1 && < 1.5,
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
-                       unix,
                        utf8-string >= 0.3 && < 1.1,
                        vector >= 0.7
+
+  if flag(curses) && !os(windows)
+    build-depends:     unix,
+                       terminfo >= 0.3 && < 0.5
 
 test-suite verify-utf8-width
   default-language:    Haskell2010
@@ -536,10 +592,13 @@ test-suite verify-utf8-width
                        deepseq >= 1.1 && < 1.5,
                        mtl >= 1.1.1.0 && < 2.3,
                        text >= 0.11.3,
-                       unix,
                        utf8-string >= 0.3 && < 1.1,
                        vector >= 0.7
-  
+
+  if flag(curses) && !os(windows)
+    build-depends:     unix,
+                       terminfo >= 0.3 && < 0.5
+
 test-suite verify-using-mock-input
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
@@ -566,12 +625,14 @@ test-suite verify-using-mock-input
                        lens >= 3.9.0.2 && < 5.0,
                        mtl >= 1.1.1.0 && < 2.3,
                        stm,
-                       terminfo >= 0.3 && < 0.5,
                        text >= 0.11.3,
-                       unix,
                        utf8-string >= 0.3 && < 1.1,
                        vector >= 0.7
-  
+
+  if flag(curses) && !os(windows)
+    build-depends:     unix,
+                       terminfo >= 0.3 && < 0.5
+
   ghc-options:         -threaded -Wall
 
 test-suite verify-config
@@ -602,11 +663,12 @@ test-suite verify-config
                        lens >= 3.9.0.2 && < 5.0,
                        mtl >= 1.1.1.0 && < 2.3,
                        string-qq,
-                       terminfo >= 0.3 && < 0.5,
                        text >= 0.11.3,
-                       unix,
                        utf8-string >= 0.3 && < 1.1,
                        vector >= 0.7
 
-  ghc-options:         -threaded -Wall
+  if flag(curses) && !os(windows)
+    build-depends:     unix,
+                       terminfo >= 0.3 && < 0.5
 
+  ghc-options:         -threaded -Wall
