--- a/vty.cabal
+++ b/vty.cabal
@@ -122,6 +122,7 @@ library
 
     include-dirs:      foreign/posix
 
+    -- both are defined but I know of no case where only one would be true.
     cpp-options:       -DPOSIX -DTERMINFO
 
   if os(windows)
@@ -157,7 +158,7 @@ executable vty-demo
                        lens,
                        mtl >= 1.1.1.0 && < 2.3
 
-test-suite verify-attribute-ops
+test-suite attribute-ops
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
   type:                detailed-0.9
@@ -183,7 +184,7 @@ test-suite verify-attribute-ops
   if os(windows)
     build-depends:    Win32
 
-test-suite verify-using-mock-terminal
+test-suite using-mock-terminal
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
 
@@ -221,7 +222,7 @@ test-suite verify-using-mock-terminal
   if os(windows)
     build-depends:    Win32
 
-test-suite verify-terminal
+test-suite terminal
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
 
@@ -256,11 +257,12 @@ test-suite verify-terminal
   if flag(curses) && !os(windows)
     build-depends:     unix,
                        terminfo >= 0.3 && < 0.5
+    cpp-options:       -DPOSIX -DTERMINFO
 
   if os(windows)
     build-depends:    Win32
 
-test-suite verify-display-attributes
+test-suite display-attributes
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
 
@@ -298,7 +300,7 @@ test-suite verify-display-attributes
   if os(windows)
     build-depends:    Win32
 
-test-suite verify-empty-image-props
+test-suite empty-image-props
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
 
@@ -330,7 +332,7 @@ test-suite verify-empty-image-props
   if os(windows)
     build-depends:    Win32
 
-test-suite verify-eval-terminfo-caps
+test-suite eval-terminfo-caps
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
 
@@ -360,11 +362,12 @@ test-suite verify-eval-terminfo-caps
   if flag(curses) && !os(windows)
     build-depends:     unix,
                        terminfo >= 0.3 && < 0.5
+    cpp-options:       -DPOSIX -DTERMINFO
 
   if os(windows)
     build-depends:    Win32
 
-test-suite verify-image-ops
+test-suite image-ops
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
 
@@ -398,7 +401,7 @@ test-suite verify-image-ops
   if os(windows)
     build-depends:    Win32
 
-test-suite verify-image-trans
+test-suite image-trans
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
 
@@ -432,7 +435,7 @@ test-suite verify-image-trans
   if os(windows)
     build-depends:    Win32
 
-test-suite verify-inline
+test-suite inline
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
 
@@ -461,11 +464,12 @@ test-suite verify-inline
   if flag(curses) && !os(windows)
     build-depends:     unix,
                        terminfo >= 0.3 && < 0.5
+    cpp-options:       -DPOSIX -DTERMINFO
 
   if os(windows)
     build-depends:    Win32
 
-test-suite verify-parse-terminfo-caps
+test-suite parse-terminfo-caps
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
 
@@ -495,11 +499,12 @@ test-suite verify-parse-terminfo-caps
   if flag(curses) && !os(windows)
     build-depends:     unix,
                        terminfo >= 0.3 && < 0.5
+    cpp-options:       -DPOSIX -DTERMINFO
 
   if os(windows)
     build-depends:    Win32
 
-test-suite verify-simple-span-generation
+test-suite simple-span-generation
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
 
@@ -537,7 +542,7 @@ test-suite verify-simple-span-generation
     build-depends:    Win32
 
 
-test-suite verify-crop-span-generation
+test-suite crop-span-generation
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
 
@@ -575,7 +580,7 @@ test-suite verify-crop-span-generation
     build-depends:    Win32
 
 
-test-suite verify-layers-span-generation
+test-suite layers-span-generation
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
 
@@ -612,7 +617,7 @@ test-suite verify-layers-span-generation
   if os(windows)
     build-depends:    Win32
 
-test-suite verify-utf8-width
+test-suite utf8-width
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
 
@@ -644,7 +649,7 @@ test-suite verify-utf8-width
   if os(windows)
     build-depends:    Win32
 
-test-suite verify-using-mock-input
+test-suite using-mock-input
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
 
@@ -677,13 +682,14 @@ test-suite verify-using-mock-input
   if flag(curses) && !os(windows)
     build-depends:     unix,
                        terminfo >= 0.3 && < 0.5
+    cpp-options:       -DPOSIX -DTERMINFO
 
   if os(windows)
     build-depends:    Win32
 
   ghc-options:         -threaded -Wall
 
-test-suite verify-config
+test-suite config
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
 
